yeti: fix radio and checkbox alignment, closes #343

--- a/yeti/bootstrap.css
+++ b/yeti/bootstrap.css
@@ -6492,6 +6492,10 @@ label,
   font-size: 12px;
   font-weight: normal;
 }
+input[type="radio"],
+input[type="checkbox"] {
+  margin-top: 1px;
+}
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
