--- a/yeti/bootswatch.less
+++ b/yeti/bootswatch.less
@@ -249,6 +249,11 @@ label,
   font-weight: normal;
 }
 
+input[type="radio"],
+input[type="checkbox"] {
+  margin-top: 1px;
+}
+
 // Navs =======================================================================
 
 .nav {
